syntax = "proto3";

package email;

import "common/empty.proto";

service EmailService {
  rpc SendEmail(SendEmailRequest) returns (common.Empty);
}

message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string template = 3;
  map<string, string> context = 4;
}